<resources>
    <string name="app_name">Time warp scan</string>
    <string name="loading">Loading...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="trending_videos">Trending videos</string>
    <string name="share_app">Share app</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="settings">Settings</string>
    <string name="rate_app">Rate app</string>
    <string name="feedback_amp_report"><![CDATA[Feedback & report]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="explore">Explore</string>
    <string name="gallery">Gallery</string>
    <string name="game">Game</string>
    <string name="this_feature_will_be_update_on_the_next_version">This feature will be update on the next version.</string>
    <string name="coming_soon">Coming soon</string>
    <string name="open_trending">Open trending</string>
    <string name="confirm_discard">Confirm discard</string>
    <string name="discard_main_text">Are you sure you want to exit? Your image/video will not be save.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="exit_popup_main_text">Are you sure you want to exit? Your image/video will not be save.</string>
    <string name="exit_popup_header">Do you want to exit app?</string>
    <string name="move_your_face_down_to_make_a_long_forehead">Move your face down to make a long forehead</string>
    <string name="photo">Photo</string>
    <string name="share">Share</string>
    <string name="share_fragment_main_text">Your image/video was saved successfully.\nShare with your friend now.</string>
    <string name="scan_more">Scan more</string>
    <string name="camera">Camera</string>
    <string name="video">Video</string>
    <string name="line_speed">%ss</string>
</resources>